--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.1.1",
     "ms": "^2.1.3",
     "nodemon": "^3.0.2",
-    "pretty-ms": "^8.0.0"
+    "pretty-ms": "^8.0.0",
+    "ws": "^8.18.0"
   }
 }
