--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cron": "^3.1.6",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
+    "get-image-colors": "^4.0.1",
     "gif-frames": "^1.0.1",
     "googleapis": "^140.0.1",
+    "kawaii-api": "^1.1.1",
     "mongoose": "^8.1.1",
     "ms": "^2.1.3",
     "nodemon": "^3.0.2",
