--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "dependencies": {
     "canvacord": "^6.0.1",
     "cron": "^3.1.6",
+    "discord-actions": "^2.3.13",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
     "get-image-colors": "^4.0.1",
     "gif-frames": "^1.0.1",
     "googleapis": "^140.0.1",
-    "kawaii-api": "^1.1.1",
     "mongoose": "^8.1.1",
     "ms": "^2.1.3",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.0.2",
     "pretty-ms": "^8.0.0",
     "ws": "^8.18.0"
