--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ainasepics": "^4.6.14",
     "canvacord": "^6.0.1",
     "cron": "^3.1.6",
     "discord-actions": "^2.3.13",
