--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "discord-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "<div style=\"border-bottom: 1px solid #eee\" align=\"center\">\r     <h3 align=\"center\"><a href=\"https://git.io/typing-svg\"><img src=\"https://readme-typing-svg.demolab.com?font=Montserrat&weight=500&size=33&pause=1000&color=4D7CAE&repeat=false&random=false&width=160&lines=Femida\" alt=\"Typing SVG\" /></a></h3>\r         <a href=\"https://github.com/EgorMaz230/discord_bot_goIteens/graphs/contributors\" >\r           <img src=\"https://contrib.rocks/image?repo=EgorMaz230/discord_bot_goIteens\"  />\r         </a>\r         <a href=\"https://git.io/typing-svg\"><img src=\"https://readme-typing-svg.demolab.com?font=Fira+Code&weight=500&size=22&pause=1000&color=375A7F&center=true&vCenter=true&multiline=true&repeat=false&random=false&width=910&height=100&lines=Femida+-+%D1%86%D0%B5+%D0%B4%D1%96%D1%81%D0%BA%D0%BE%D1%80%D0%B4+%D0%B1%D0%BE%D1%82+%D1%81%D1%82%D0%B2%D0%BE%D1%80%D0%B5%D0%BD%D0%B8%D0%B9+%D0%BA%D0%BE%D0%BC%D0%B0%D0%BD%D0%B4%D0%BE%D1%8E+%D1%83%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D0%B8%D1%85+%D1%80%D0%BE%D0%B7%D1%80%D0%BE%D0%B1%D0%BD%D0%B8%D0%BA%D1%96%D0%B2%E2%8F%AB\" alt=\"Typing SVG\" /></a>\r </div>",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,5 +26,6 @@
     "nodemon": "^3.0.2",
     "pretty-ms": "^8.0.0",
     "ws": "^8.18.0"
-  }
+  },
+  "devDependencies": {}
 }
