--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "googleapis": "^140.0.1",
     "mongoose": "^8.1.1",
     "ms": "^2.1.3",
+    "nanoid": "^3.3.4",
     "node-cache": "^5.1.2",
     "nodemon": "^3.0.2",
     "pretty-ms": "^8.0.0",
