--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "ainasepics": "^4.6.14",
+    "amqplib": "^0.10.5",
     "canvacord": "^6.0.1",
     "cron": "^3.1.6",
     "discord-actions": "^2.3.13",
