--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "discord-actions": "^2.3.13",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
+    "eth-phishing-detect": "^1.2.0",
     "get-image-colors": "^4.0.1",
     "gif-frames": "^1.0.1",
     "googleapis": "^140.0.1",
