--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "ainasepics": "^4.6.14",
     "amqplib": "^0.10.5",
+    "axios": "^1.7.9",
     "canvacord": "^6.0.1",
     "cron": "^3.1.6",
     "discord-actions": "^2.3.13",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
-    "eth-phishing-detect": "^1.2.0",
     "get-image-colors": "^4.0.1",
     "gif-frames": "^1.0.1",
     "googleapis": "^140.0.1",
