--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./src/index.js",
-    "cmds" : "node ./src/deploy-commands.js"
+    "cmds": "node ./src/deploy-commands.js"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +27,7 @@
     "ms": "^2.1.3",
     "nanoid": "^3.3.4",
     "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.0.2",
     "pretty-ms": "^8.0.0",
     "ws": "^8.18.0"
